--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,11 @@ script:
 cache: pip
 notifications:
   email: false
+  webhooks:
+    urls:
+      - https://injabie3.moe/travis-ci-ren.php
+    on_success: always # default: always
+    on_failure: always # default: always
+    on_start: always   # default: never
+    on_cancel: always # default: always
+    on_error: always # default: always
