--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ python:
   - "3.5.2"
 install:
   - pip install -r requirements.txt
+  - pip install pylint
 script:
   - python -m compileall ./red.py
   - python -m compileall ./cogs
   - python ./red.py --no-prompt --no-cogs --dry-run
+  - pylint cogs/*
 cache: pip
 notifications:
   email: false
