--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install pylint
+  - pip install mysqlclient
 script:
   - python -m compileall ./red.py
   - python -m compileall ./cogs
