[Highlight] Add ability to blacklist users (#188)
* [Highlight] Begin adding blacklist feature
- Start by templating required commands.

* [Highlight] Add logic for user blacklist commands
- Also add a clear command to quickly clear users from blacklist.

* [Travis] Fix requirements dependencies
- Move pylint install into requirements.txt.
- Pin discord.py on the async branch.

* [Highlight] Add user blacklist to event loop

* [Highlight] Add alias to base command

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 pip
-git+git://github.com/Rapptz/discord.py.git#egg=discord.py[voice]
+https://github.com/Rapptz/discord.py/archive/async.zip
 youtube_dl
 imgurpython
 bs4
 feedparser
 mysqlclient
 Pillow
+pylint==2.3.0
