--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ install_requires =
     commonmark==0.9.1
     contextlib2==0.6.0.post1
     discord.py==1.6.0
+    discord-py-slash-command==1.0.9.5
     distro==1.5.0; sys_platform == "linux"
     fuzzywuzzy==0.18.0
     idna==2.10
